--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
     <name>Eazy Regnskab</name>
 
-    <description></description>
+    <description>Eazy regnskab </description>
     <!--
         <organization>
             <name>company name</name>
@@ -55,6 +55,12 @@
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.20</version>
         </dependency>
 
         <!--  WICKET DEPENDENCIES -->
@@ -93,11 +99,7 @@
             <artifactId>wicket-spring-annot</artifactId>
             <version>1.3.7</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.wicket</groupId>
-            <artifactId>wicket-extensions</artifactId>
-            <version>${wicket.version}</version>
-        </dependency>
+
         <dependency>
             <groupId>org.apache.wicket</groupId>
             <artifactId>wicket-auth-roles</artifactId>
@@ -166,12 +168,6 @@
         <!--Spring security-->
 
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
             <version>${spring.version}</version>
@@ -195,11 +191,6 @@
             <version>${spring.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-web</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
 
 
 
