--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,11 +11,19 @@
         </listener-class>
     </listener>
 
+    <listener>
+        <listener-class>
+            org.springframework.security.web.session.HttpSessionEventPublisher
+        </listener-class>
+    </listener>
+
+
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
             /WEB-INF/spring-security.xml
             /WEB-INF/applicationContext.xml
+            /WEB-INF/dataSource.xml
         </param-value>
     </context-param>
 
@@ -27,6 +35,7 @@
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+
 
     <filter>
         <filter-name>wicket.eazyregnskab</filter-name>
