--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
     <name>Eazy Regnskab</name>
 
-    <description>Eazy regnskab </description>
+    <description>Eazy regnskab</description>
     <!--
         <organization>
             <name>company name</name>
@@ -46,7 +46,11 @@
         <hibernate.version>4.1.9.Final</hibernate.version>
         <spring.version>3.1.3.RELEASE</spring.version>
         <jetty.version>7.6.3.v20120416</jetty.version>
+
+        <source.encoding>UTF-8</source.encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
     </properties>
     <dependencies>
 
@@ -160,9 +164,9 @@
             <version>${spring.version}</version>
         </dependency>
         <dependency>
-        	<groupId>org.springframework</groupId>
-        	<artifactId>spring-expression</artifactId>
-        	<version>3.1.3.RELEASE</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-expression</artifactId>
+            <version>3.1.3.RELEASE</version>
         </dependency>
 
         <!--Spring security-->
@@ -190,8 +194,6 @@
             <artifactId>spring-security-config</artifactId>
             <version>${spring.version}</version>
         </dependency>
-
-
 
 
         <!-- LOGGING DEPENDENCIES - LOG4J -->
@@ -224,20 +226,33 @@
     </dependencies>
     <build>
         <resources>
-            <resource>
-                <filtering>false</filtering>
-                <directory>src/main/resources</directory>
-            </resource>
-            <resource>
-                <filtering>false</filtering>
-                <directory>src/main/java</directory>
-                <includes>
-                    <include>**</include>
-                </includes>
-                <excludes>
-                    <exclude>**/*.java</exclude>
-                </excludes>
-            </resource>
+
+                <!-- Standard stuff -->
+                <resource>
+                    <directory>src/main/resources</directory>
+                </resource>
+
+                <!-- Styles -->
+                <!--<resource>-->
+                    <!--<directory>src/main/jasperreports</directory>-->
+                    <!--<includes>-->
+                        <!--<include>*.jrtx</include>-->
+                        <!--&lt;!&ndash; jasper reports &ndash;&gt;-->
+                        <!--<include>*.properties</include>-->
+                        <!--&lt;!&ndash; localization files &ndash;&gt;-->
+                    <!--</includes>-->
+                <!--</resource>-->
+
+                <!-- Wicket -->
+                <resource>
+                    <directory>src/main/java</directory>
+                    <includes>
+                        <include>**/*.html</include>
+                        <include>**/*.properties</include>
+                        <!--<include>**/*.csv</include>–-->
+                    </includes>
+                </resource>
+
         </resources>
         <testResources>
             <testResource>
