#2: Design front page and public subpages

--- a/src/main/java/dk/eazyit/eazyregnskab/web/app/front/HomePage.utf8.properties
+++ b/src/main/java/dk/eazyit/eazyregnskab/web/app/front/HomePage.utf8.properties
@@ -1,7 +1,11 @@
+lead.text=Accounting made eazy
 get.started.today=Get started today
 view.details=View details
 
 what.you.get=What you get
+what.you.get.text=An accounting program that is eazy to use, wheter you are new to bookkeeping or an experienced accountant.
 for.administrators=For accountants
+for.administrators.text=If you are an accountant or bookkeeper, you cant get our own login to your customers accounts and help them with their bookkeeping.
 pricing=Prices
+pricing.text=Eazy accounting is free to use for 30 days, after that you pay for how many transactions you make, our prices are very reasonable.
 
