--- a/mainwar/src/main/webapp/WEB-INF/web.xml
+++ b/mainwar/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,10 @@
         </listener-class>
     </listener>
 
+    <listener>
+        <listener-class>ch.qos.logback.classic.selector.servlet.ContextDetachingSCL</listener-class>
+    </listener>
+
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
@@ -45,8 +49,18 @@
             <param-value>dk.eazyit.eazyregnskab.web.app.WicketApplication</param-value>
         </init-param>
     </filter>
+
     <filter-mapping>
         <filter-name>wicket.eazyregnskab</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>LoggerContextFilter</filter-name>
+        <filter-class>ch.qos.logback.classic.selector.servlet.LoggerContextFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>LoggerContextFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
