--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <hibernate.version>4.1.9.Final</hibernate.version>
         <spring.version>3.1.3.RELEASE</spring.version>
         <jetty.version>8.1.0.RC2</jetty.version>
+        <slf4j.version>1.7.2</slf4j.version>
 
         <source.encoding>UTF-8</source.encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
