--- a/server/pom.xml
+++ b/server/pom.xml
@@ -19,36 +19,45 @@
             <artifactId>jetty-plus</artifactId>
             <version>${jetty.version}</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.6.4</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
-           <plugins>
-               <plugin>
-                   <artifactId>maven-assembly-plugin</artifactId>
-                   <version>2.2.1</version>
-                   <configuration>
-                       <descriptorRefs>
-                           <descriptorRef>jar-with-dependencies</descriptorRef>
-                       </descriptorRefs>
-                       <archive>
-                           <manifest>
-                               <mainClass>eazyit.Start</mainClass>
-                           </manifest>
-                       </archive>
-                    </configuration>
-                   <executions>
-                       <execution>
-                           <id>make-assembly</id>
-                           <phase>package</phase> <!-- bind to the packaging phase -->
-                           <goals>
-                               <goal>single</goal>
-                           </goals>
-                       </execution>
-                   </executions>
-               </plugin>
-           </plugins>
-       </build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.2.1</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>eazyit.Start</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <!-- bind to the packaging phase -->
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
