#6: Create deploy script

--- a/awsupload/pom.xml
+++ b/awsupload/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>awsupload</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.49</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
