--- a/mainwar/pom.xml
+++ b/mainwar/pom.xml
@@ -196,7 +196,18 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         <!--Spring security-->
 
         <dependency>
@@ -308,6 +319,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <inherited>true</inherited>
+                <configuration>
+                   <warName>eazyregnskab</warName>
+                </configuration>
             </plugin>
         </plugins>
     </build>
