#14: Create menu structure

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -2,3 +2,7 @@ eazy.regnskab=Eazy accounting
 
 button.save=Save
 button.cancel=Cancel
+
+#Links
+link.settings=Settings
+chart.of.accounts=Chart of accounts
