--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage.utf8.properties
@@ -1,6 +1,10 @@
+#Button names
 home=Home
 about=About
 contact=Contact
 login=Login
 logout=Log out
+settings=Settings
+bookkeeping=Bookkeeping
+
 
