--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/components/page/AppBasePage_da.utf8.properties
@@ -1,6 +1,8 @@
+#Button names
 home=Hjem
 about=Om os
 contact=Kontakt
 login=Log ind
 logout=Log ud
-
+settings=Indstillinger
+bookkeeping=Bogf\u00F8ring
