--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -2,3 +2,7 @@ eazy.regnskab=Eazy regnskab
 
 button.save=Gem
 button.cancel=Fortryd
+
+#Links
+link.settings=Indstillinger
+chart.of.accounts=Kontoplan
