--- a/mainwar/src/test/resources/web.xml
+++ b/mainwar/src/test/resources/web.xml
@@ -18,17 +18,12 @@
         </listener-class>
     </listener>
 
-    <listener>
-        <listener-class>ch.qos.logback.classic.selector.servlet.ContextDetachingSCL</listener-class>
-    </listener>
-
-
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
-            /WEB-INF/spring-security.xml
-            /WEB-INF/applicationContext.xml
-            /WEB-INF/dataSource.xml
+            /spring-security.xml
+            /applicationContext.xml
+            /dataSource.xml
         </param-value>
     </context-param>
 
@@ -55,13 +50,5 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <filter>
-        <filter-name>LoggerContextFilter</filter-name>
-        <filter-class>ch.qos.logback.classic.selector.servlet.LoggerContextFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>LoggerContextFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
 
 </web-app>
