--- a/awsupload/src/main/resources/log-config.properties
+++ b/awsupload/src/main/resources/log-config.properties
@@ -2,15 +2,10 @@
 handlers=java.util.logging.ConsoleHandler
 
 # Set the default logging level for the root logger
-.level=INFO
-dk.eazyit.eazyregnskab=DEBUG
-org.springframework=INFO
-org.apache.wicket=INFO
-org.hibernate=INFO
+.level=WARN
 
 # Set the default logging level
 java.util.logging.ConsoleHandler.level=DEBUG
 
 # Set the default formatter
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
-
