#11: Create domain objects for legal entity support

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -7,3 +7,9 @@ button.cancel=Cancel
 #Links
 link.settings=Settings
 chart.of.accounts=Chart of accounts
+
+#Countries
+Country.DK=Denmark
+
+#Currencies
+MoneyCurrency.DK=DKK
