--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -7,3 +7,9 @@ button.cancel=Fortryd
 #Links
 link.settings=Indstillinger
 chart.of.accounts=Kontoplan
+
+#Countries
+Country.DK=Danmark
+
+#Currencies
+MoneyCurrency.DK=DKK
