#14: Create menu structure

--- a/mainwar/src/main/webapp/WEB-INF/log-config.properties
+++ b/mainwar/src/main/webapp/WEB-INF/log-config.properties
@@ -7,6 +7,7 @@ dk.eazyit.eazyregnskab=DEBUG
 org.springframework=INFO
 org.apache.wicket=INFO
 org.hibernate=INFO
+org.reflections=SEVERE
 
 # Set the default logging level
 java.util.logging.ConsoleHandler.level=DEBUG
