#14: Create menu structure

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/SettingsPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/SettingsPage.utf8.properties
@@ -1,1 +1,9 @@
 title=Settings
+description=Here you can fill base data for legal entities
+name=Name
+legalIdentification=SSN/VAT nr.
+address=Address
+postalCode=Postal code
+country=Country
+moneyCurrency=Currency
+
