--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/SettingsPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/SettingsPage_da.utf8.properties
@@ -1,1 +1,9 @@
 title=Indstillinger
+description=Her kan du udfylde stamdata for dine juridiske enheder
+name=Navn
+legalIdentification=CPR/CVR
+address=Adresse
+postalCode=Postnummer
+country=Land
+moneyCurrency=Valuta
+
