#14: Create menu structure

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -5,8 +5,15 @@ button.save=Gem
 button.cancel=Fortryd
 
 #Links
-link.settings=Indstillinger
-chart.of.accounts=Kontoplan
+settings=Indstillinger
+settings.base.data=Stamdata
+settings.chart.of.accounts=Kontoplan
+
+bookkeeping=Bogf\u00F8ring
+bookkeeping.daybook=Kasseklade
+
+reports=Rapporter
+reports.balance=Saldobalance
 
 #Countries
 Country.DK=Danmark
