--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/BaseDataPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/BaseDataPage.utf8.properties
@@ -1,4 +1,4 @@
-title=Settings
+title=Base data
 description=Here you can fill base data for legal entities
 name=Name
 legalIdentification=SSN/VAT nr.
