--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/BaseDataPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/BaseDataPage_da.utf8.properties
@@ -1,4 +1,4 @@
-title=Indstillinger
+title=Stamdata
 description=Her kan du udfylde stamdata for dine juridiske enheder
 name=Navn
 legalIdentification=CPR/CVR
