--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -5,8 +5,15 @@ button.save=Save
 button.cancel=Cancel
 
 #Links
-link.settings=Settings
-chart.of.accounts=Chart of accounts
+settings=Settings
+settings.base.data=Base data
+settings.chart.of.accounts=Chart of accounts
+
+bookkeeping=Bookkeeping
+bookkeeping.daybook=Daybook
+
+reports=Reports
+reports.balance=Balance
 
 #Countries
 Country.DK=Denmark
