#12: Create settings page

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/BaseDataPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/BaseDataPage_da.utf8.properties
@@ -7,3 +7,9 @@ postalCode=Postnummer
 country=Land
 moneyCurrency=Valuta
 
+must.be.one.legal.entity=Der skal altid v\u00E6re mindst en juridisk enhed.
+
+legal.entity.was.deleted=Den juridiske enhed er blevet slettet
+new.legal.entity=Ny juridisk enhed
+created.and.saved.new.entity=Der er blevet lavet en ny juridisk enhed
+changes.has.been.saved=\u00C6ndringerne er blevet gemt
