--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/BaseDataPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/BaseDataPage.utf8.properties
@@ -7,3 +7,10 @@ postalCode=Postal code
 country=Country
 moneyCurrency=Currency
 
+must.be.one.legal.entity=There must always be at least one Legal entity.
+
+legal.entity.was.deleted=The legal entity was deleted
+new.legal.entity=New Legal entity
+created.and.saved.new.entity=New Legal entity has been created
+changes.has.been.saved=The changes has been saved
+
