--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -21,4 +21,12 @@ Country.DK=Denmark
 #Currencies
 MoneyCurrency.DKK=DKK
 
+FinancePostingStatus.DRAFT
+FinancePostingStatus.BOOKED
+
+FinanceAccountType.PROFIT=Profit
+FinanceAccountType.LOSS=Expense
+FinanceAccountType.ASSET=Asset
+FinanceAccountType.LIABILITY=Liability
+
 
