--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -21,4 +21,8 @@ Country.DK=Danmark
 #Currencies
 MoneyCurrency.DKK=DKK
 
+FinanceAccountType.PROFIT=Indt\u00E6gt
+FinanceAccountType.LOSS=Udgift
+FinanceAccountType.ASSET=Aktiv
+FinanceAccountType.LIABILITY=Passiv
 
