--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -3,6 +3,8 @@ eazy.regnskab.brand=Eazy accounting
 
 button.save=Save
 button.cancel=Cancel
+button.edit=Edit
+button.delete=Delete
 
 #Links
 settings=Settings
