--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -3,6 +3,8 @@ eazy.regnskab.brand=Eazy regnskab
 
 button.save=Gem
 button.cancel=Fortryd
+button.edit=Rediger
+button.delete=Slet
 
 #Links
 settings=Indstillinger
