--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.utf8.properties
@@ -4,3 +4,9 @@ name=Name
 accountNumber=Account number
 vatType=VAT type
 financeAccountType=Account type
+action=Edit
+
+finance.account.was.deleted=Finance account was deleted
+finance.account.is.in.use=Finance account is in use, and cannot be deleted
+changes.has.been.saved=Changes have been saved
+finance.account.was.never.saved=Finance account was never saved
