--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage_da.utf8.properties
@@ -4,3 +4,9 @@ name=Navn
 accountNumber=Kontonummer
 vatType=Momstype
 financeAccountType=Kontotype
+action=Rediger
+
+finance.account.was.deleted=Finanskontoen blev slettet
+finance.account.is.in.use=Finanskontoen er i brug og kan ikke slettes.
+changes.has.been.saved=\u00C6ndringerne er blevet gemt
+finance.account.was.never.saved=Finanskontoen var ikke gemt
