#26: Edit description of pages

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
@@ -1,1 +1,2 @@
 title=Bookkeeping
+description=Here you can create finance posting, edit non-booked finance postings and delete non-booked finance postings
