--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
@@ -1,1 +1,2 @@
 title=Bogf\u00F8ring
+description=Her kan du oprette finansposteringer, redigere i kladden samt slette ikke bogf\u00F8rte finanspostinger
