--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.utf8.properties
@@ -1,5 +1,5 @@
 title=Chart of accounts
-
+description=Here you can create, edit and delete finance account
 name=Name
 accountNumber=Account number
 vatType=VAT type
