#28: create daily ledger page

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -10,6 +10,7 @@ button.delete=Delete
 settings=Settings
 settings.base.data=Base data
 settings.chart.of.accounts=Chart of accounts
+settings.daily.ledger=Daily ledger
 
 bookkeeping=Bookkeeping
 bookkeeping.daybook=Daybook
