--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -10,6 +10,7 @@ button.delete=Slet
 settings=Indstillinger
 settings.base.data=Stamdata
 settings.chart.of.accounts=Kontoplan
+settings.daily.ledger=Kasseklader
 
 bookkeeping=Bogf\u00F8ring
 bookkeeping.daybook=Kasseklade
