#13: Create bookkeeping page

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.utf8.properties
@@ -5,6 +5,6 @@ action=Edit
 name=name
 
 daily.ledger.was.deleted=Daily ledger was deleted
-daily.ledger.is.in.use=Daily ledger is in use, and cannot be deleted
+daily.ledger.is.in.use=Daily ledger is in use or is the last left, and cannot be deleted
 changes.has.been.saved=Changes have been saved
 daily.ledger.was.never.saved=Daily ledger was never saved
