--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
@@ -1,2 +1,11 @@
 title=Bookkeeping
 description=Here you can create finance posting, edit non-booked finance postings and delete non-booked finance postings
+
+action=Edit
+
+date=Date
+financeAccount=Finance account
+financeAccount.reverse=Reverse finance account
+amount=Amount
+vatType=vatType
+text=Description
