--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
@@ -1,2 +1,11 @@
 title=Bogf\u00F8ring
 description=Her kan du oprette finansposteringer, redigere i kladden samt slette ikke bogf\u00F8rte finanspostinger
+
+action=Rediger
+
+date=Dato
+financeAccount=Finanskonto
+finance.account.reverse=Modkonto
+amount=Bel\u00F8b
+vatType=Momstype
+text=Posteringstekst
