--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
@@ -1,6 +1,6 @@
 title=Bogf\u00F8ring
-description=Her kan du oprette finansposteringer, redigere i kladden samt slette ikke bogf\u00F8rte finanspostinger
-
+description=Her kan du oprette og redigere finansposteringer
+daily.ledger=Kasseklade
 action=Rediger
 
 date=Dato
