--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.utf8.properties
@@ -4,6 +4,7 @@ name=Name
 accountNumber=Account number
 vatType=VAT type
 financeAccountType=Account type
+standard.reverse.finance.account=Standard reverse account
 action=Edit
 
 finance.account.was.deleted=Finance account was deleted
