--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage_da.utf8.properties
@@ -4,6 +4,7 @@ name=Navn
 accountNumber=Kontonummer
 vatType=Momstype
 financeAccountType=Kontotype
+standard.reverse.finance.account=Standard modkonto
 action=Rediger
 
 finance.account.was.deleted=Finanskontoen blev slettet
