#13: Create bookkeeping page

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
@@ -1,6 +1,6 @@
 title=Bookkeeping
 description=Here you can create and edit finance postings
-daily.ledger=Daily ledger
+daily.ledger=Daily ledgers
 action=Edit
 
 date=Date
