--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
@@ -1,6 +1,6 @@
 title=Bogf\u00F8ring
 description=Her kan du oprette og redigere finansposteringer
-daily.ledger=Kasseklade
+daily.ledger=Kasseklader
 action=Rediger
 
 date=Dato
