#13: Create bookkeeping page

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
@@ -9,3 +9,7 @@ finance.account.reverse=Modkonto
 amount=Bel\u00F8b
 vatType=Momstype
 text=Posteringstekst
+bookingNumber=Bilagsnummer
+chose=V\u00E6lg
+
+finance.posting.was.deleted=Bilaget blev slettet
