--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
@@ -4,8 +4,12 @@ daily.ledger=Daily ledgers
 action=Edit
 
 date=Date
-financeAccount=Finance account
-financeAccount.reverse=Reverse finance account
+finance.account=Finance account
+finance.account.reverse=Reverse finance account
 amount=Amount
 vatType=vatType
 text=Description
+bookingNumber=Booking number
+chose=Chose
+
+finance.posting.was.deleted=Finance posting was deleted
