#42: add feedback on user creation

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage.utf8.properties
@@ -3,3 +3,7 @@ username=Username
 password=Password
 repeat.password=Repeat password
 create.account=Create account
+username.not.accepted=Username does satisfy the requirements
+password.not.accepted=Password does satisfy the requirements
+passwords.dont.match=Passwords dont match
+account.created.for.user=Account created for user
