--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage_da.utf8.properties
@@ -3,3 +3,7 @@ username=Brugernavn
 password=Kodeord
 repeat.password=Gentag kodeord
 create.account=Opret konto
+username.not.accepted=Brugernavnet lever ikke op til kravene
+password.not.accepted=Kodeordet lever ikke op til kravene
+passwords.dont.match=Kodeordene var ikke ens
+account.created.for.user=Konto oprettet for bruger
