#45: java.lang.IllegalArgumentException: Unknown name value [EXPENSE] for enum class [dk.eazyit.eazyregnskab.domain.FinanceAccountType] bug
And other small language bugs.

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -13,7 +13,7 @@ settings.chart.of.accounts=Chart of accounts
 settings.daily.ledger=Daily ledger
 
 bookkeeping=Bookkeeping
-bookkeeping.daybook=Daybook
+bookkeeping.daybook=Daily ledger
 
 reports=Reports
 reports.balance=Balance
@@ -23,9 +23,6 @@ Country.DK=Denmark
 
 #Currencies
 MoneyCurrency.DKK=DKK
-
-FinancePostingStatus.DRAFT
-FinancePostingStatus.BOOKED
 
 FinanceAccountType.PROFIT=Profit
 FinanceAccountType.EXPENSE=Expense
