--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.utf8.properties
@@ -2,7 +2,8 @@ title=Daily ledgers
 description=Here you can create daily ledgers
 action=Edit
 
-name=name
+name=Name
+new.ledger=New ledger
 
 daily.ledger.was.deleted=Daily ledger was deleted
 daily.ledger.is.in.use=Daily ledger is in use or is the last left, and cannot be deleted
