--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage_da.utf8.properties
@@ -3,6 +3,7 @@ description=Her kan du lave klasseklader
 action=Rediger
 
 name=Navn
+new.ledger=Ny kasseklade
 
 daily.ledger.was.deleted=Kassekladen blev slettet
 daily.ledger.is.in.use=Kassekladen er i brug eller er den sidste tilbage, og kan ikke slettes.
