--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
@@ -4,10 +4,10 @@ daily.ledger=Daily ledgers
 action=Edit
 
 date=Date
-finance.account=Finance account
+financeAccount=Finance account
 finance.account.reverse=Reverse finance account
 amount=Amount
-vatType=vatType
+vatType=Vat type
 text=Description
 bookingNumber=Booking number
 chose=Chose
