#36: Create vattype page
Changed usage of Bigdecimal to double

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication.utf8.properties
@@ -11,6 +11,7 @@ settings=Settings
 settings.base.data=Base data
 settings.chart.of.accounts=Chart of accounts
 settings.daily.ledger=Daily ledger
+settings.vat.type=Vat types
 
 bookkeeping=Bookkeeping
 bookkeeping.daybook=Daily ledger
