--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/WicketApplication_da.utf8.properties
@@ -11,6 +11,7 @@ settings=Indstillinger
 settings.base.data=Stamdata
 settings.chart.of.accounts=Kontoplan
 settings.daily.ledger=Kasseklader
+settings.vat.type=Momsops\u00E6tning
 
 bookkeeping=Bogf\u00F8ring
 bookkeeping.daybook=Kasseklade
