#47: Logging is still not working properly

--- a/mainwar/pom.xml
+++ b/mainwar/pom.xml
@@ -96,9 +96,9 @@
         </dependency>
 
         <dependency>
-        	<groupId>com.vaynberg.wicket.select2</groupId>
-        	<artifactId>wicket-select2-examples</artifactId>
-        	<version>1.0</version>
+            <groupId>com.vaynberg.wicket.select2</groupId>
+            <artifactId>wicket-select2-examples</artifactId>
+            <version>1.0</version>
         </dependency>
 
         <!--Basic Spring-->
@@ -201,17 +201,39 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.3</version>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-jdk14</artifactId>
-            <version>1.7.3</version>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>${slf4j.version}</version>
         </dependency>
         <dependency>
-            <groupId>slide</groupId>
-            <artifactId>jdk14logger</artifactId>
-            <version>2.0</version>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-access</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.1</version>
+            <scope>provided</scope>
         </dependency>
 
         <!--  JUNIT DEPENDENCY FOR TESTING -->
