--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <jetty.version>8.1.0.RC2</jetty.version>
         <slf4j.version>1.7.2</slf4j.version>
         <wicket.bootstrap.version>0.8.1</wicket.bootstrap.version>
+        <logback.version>0.9.26</logback.version>
 
         <source.encoding>UTF-8</source.encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
