--- a/mainwar/src/test/resources/web.xml
+++ b/mainwar/src/test/resources/web.xml
@@ -22,8 +22,8 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>
             /spring-security.xml
-            /applicationContext.xml
-            /dataSource.xml
+            /applicationContext-test.xml
+            /dataSource-test.xml
         </param-value>
     </context-param>
 
@@ -40,8 +40,8 @@
         <filter-name>wicket.eazyregnskab</filter-name>
         <filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
         <init-param>
-            <param-name>applicationClassName</param-name>
-            <param-value>dk.eazyit.eazyregnskab.web.app.WicketApplication</param-value>
+            <param-name>applicationFactoryClassName</param-name>
+            <param-value>org.apache.wicket.spring.SpringWebApplicationFactory</param-value>
         </init-param>
     </filter>
 
