#54: Vat type should be chosen when selecting finance account

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.utf8.properties
@@ -8,6 +8,7 @@ financeAccount=Finance account
 finance.account.reverse=Reverse finance account
 amount=Amount
 vatType=Vat type
+vatAmount=Vat amount
 text=Description
 bookingNumber=Booking number
 chose=Chose
