--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage_da.utf8.properties
@@ -9,6 +9,7 @@ finance.account.reverse=Modkonto
 amount=Bel\u00F8b
 vatType=Momstype
 text=Posteringstekst
+vatAmount=Moms bel\u00F8b
 bookingNumber=Bilagsnummer
 chose=V\u00E6lg
 
