#50: Create validators for all forms.

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage.utf8.properties
@@ -2,8 +2,10 @@ title=Sign up
 username=Username
 password=Password
 repeat.password=Repeat password
+repeat_password=Repeat password
 create.account=Create account
-username.not.accepted=Username does satisfy the requirements
-password.not.accepted=Password does satisfy the requirements
-passwords.dont.match=Passwords dont match
 account.created.for.user=Account created for user
+
+not.equal.passwords=Passwords are not equal
+password.not.adequate=Password must be between 8 and 25 characters long, consist of at least 1 number, 1 capital letter and 1 small letter
+username.not.adequate=Username must be between 8 and 25 characters long
