--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage_da.utf8.properties
@@ -2,8 +2,10 @@ title=Tilmeld dig
 username=Brugernavn
 password=Kodeord
 repeat.password=Gentag kodeord
+repeat_password=Gentag kodeord
 create.account=Opret konto
-username.not.accepted=Brugernavnet lever ikke op til kravene
-password.not.accepted=Kodeordet lever ikke op til kravene
-passwords.dont.match=Kodeordene var ikke ens
 account.created.for.user=Konto oprettet for bruger
+
+username.not.adequate=Brugernavn skal v\u00E6re mellem 8 og 25 tegn langt
+not.equal.passwords=Kodeordene er ikke ens
+password.not.adequate=Kodeordet skal v\u00E6re mellem 8 og 25 tegn langt, best\u00E5 af mindst 1 tal, et stort bogstav og et lille bogstav.
