#55: On signup add check to see if username exist

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage.utf8.properties
@@ -9,3 +9,5 @@ account.created.for.user=Account created for user
 not.equal.passwords=Passwords are not equal
 password.not.adequate=Password must be between 8 and 25 characters long, consist of at least 1 number, 1 capital letter and 1 small letter
 username.not.adequate=Username must be between 8 and 25 characters long
+
+username.all.ready.exists=Username is all ready taken
