--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage_da.utf8.properties
@@ -9,3 +9,5 @@ account.created.for.user=Konto oprettet for bruger
 username.not.adequate=Brugernavn skal v\u00E6re mellem 8 og 25 tegn langt
 not.equal.passwords=Kodeordene er ikke ens
 password.not.adequate=Kodeordet skal v\u00E6re mellem 8 og 25 tegn langt, best\u00E5 af mindst 1 tal, et stort bogstav og et lille bogstav.
+
+username.all.ready.exists=Brugernavnet er allerede taget.
