#50: Create validators for all forms.
VatType

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage_da.utf8.properties
@@ -3,10 +3,14 @@ description=Her kan du ops\u00E6tte din momskonti og momstyper
 
 name=Navn
 percentage=Procentsats
+finance.account=Finanskonto til moms
 
 action=Rediger
 
-vat.type.was.deleted=Finanskontoen blev slettet
-vat.type.is.in.use=Finanskontoen er i brug og kan ikke slettes.
+vat.type.was.deleted=Momsops\u00E6tning blev slettet
+vat.type.is.in.use=Momsops\u00E6tningen er i brug og kan ikke slettes.
 changes.has.been.saved=\u00C6ndringerne er blevet gemt
-vat.type.was.never.saved=Finanskontoen var ikke gemt
+vat.type.was.never.saved=Momsops\u00E6tningen var ikke gemt
+
+name.all.ready.exists=Navnet er allerede i brug
+name.to.long=Navnet er for langt
