--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage.utf8.properties
@@ -3,10 +3,14 @@ description=Here you can create, edit and delete vat types
 
 name=Name
 percentage=Percentage
+finance.account=Finans account for VAT
 
 action=Edit
 
-vat.type.was.deleted=Finance account was deleted
-vat.type.is.in.use=Finance account is in use, and cannot be deleted
+vat.type.was.deleted=Vat type was deleted
+vat.type.is.in.use=Vat type is in use, and cannot be deleted
 changes.has.been.saved=Changes have been saved
-vat.type.was.never.saved=Finance account was never saved
+vat.type.was.never.saved=Vat type was never saved
+
+name.all.ready.exists=Name is allready in use
+name.to.long=Name is to long
