#50: Create validators for all forms.
DailyLedger

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage.utf8.properties
@@ -9,3 +9,6 @@ daily.ledger.was.deleted=Daily ledger was deleted
 daily.ledger.is.in.use=Daily ledger is in use or is the last left, and cannot be deleted
 changes.has.been.saved=Changes have been saved
 daily.ledger.was.never.saved=Daily ledger was never saved
+
+name.all.ready.exists=Name is allready in use
+name.to.long=Name is to long
