--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage_da.utf8.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/DailyLedgerPage_da.utf8.properties
@@ -9,3 +9,6 @@ daily.ledger.was.deleted=Kassekladen blev slettet
 daily.ledger.is.in.use=Kassekladen er i brug eller er den sidste tilbage, og kan ikke slettes.
 changes.has.been.saved=\u00C6ndringerne er blevet gemt
 daily.ledger.was.never.saved=Kassekladen var ikke gemt
+
+name.all.ready.exists=Navnet er allerede i brug
+name.to.long=Navnet er for langt
